--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
   "version": "1.0.0",
   "description": "Cloning Youtube wiht Vanila and NodeJs",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Park Sang Eon",
   "dependencies": {
-    "express": "^4.16.4"
+    "@babel/core": "7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.4",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "helmet": "^3.15.1",
+    "mongoose": "^5.4.19",
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node init.js --delay 2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
