--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "helmet": "^3.15.1",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "pug": "^2.0.3"
   },
   "scripts": {
