--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "dotenv": "^7.0.0",
     "eslint-config-prettier": "^4.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-sass": "^4.11.0",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "sass-loader": "^7.1.0",
@@ -31,7 +37,7 @@
     "webpack-cli": "^3.3.0"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss'",
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "WEBPACK_ENV=production webpack"
   },
